OpenLDAP 2.3 Change Log

OpenLDAP 2.3.9 Release
	Fixed slapd req_pwdexop bug
	Fixed slapo-syncprov queued UUIDs bug (ITS#4068)
	Fixed slapo-syncprov memory leak
	Fixed slapd anlist leak
	Removed lint
	Build Environment
		Updated testsuite to test only primary backends by default
		Disable test041-aci

OpenLDAP 2.3.8 Release
	Fixed slapd undef HAVE_EPOLL issue
	Fixed slapd connection-get wake bug (ITS#3999)
	Fixed slapd uninitialized var bug (ITS#3854)
	Fixed slapd add entry without parent bug (ITS#2757)
	Fixed slapd cn=config value escaping bug (ITS#3807)
	Fixed slapd cn=config missing host/uri bug (ITS#4009)
	Fixed slapd alock symbol bug (ITS#3978)
	Fixed slapd replogfile assert (ITS#4003)
	Fixed slapd rewrite session var set bug (ITS#4023)
	Fixed slapd syncrepl empty uniqueMember bug (ITS#4040)
	Fixed slapd alias resolution bug (ITS#4030)
	Fixed slapd password-hash cleartext bug (ITS#4021)
	Fixed slapd realloc zero bug (ITS#3981)
	Fixed slapd nested overlay configuration bug (ITS#4047)
	Fixed slapd password modify oldPassword ignore bug (ITS#4049)
	Added slapd password oldPassword verify (ITS#4051)
	Fixed slapd select_backend manageDSAit with glue issue (ITS#4027)
	Updated slapd authz backend detection (ITS#4018)
	Fixed slapd-bdb/hdb pointer/integer size mismatch (ITS#4015)
	Updated slapd-hdb index management
	Fixed slapd-glue mixtures bug (ITS#3979)
	Fixed slapd-ldap unlock issue (ITS#4001)
	Fixed slapd-ldap manageDIT check bug (ITS#4005)
	Fixed slapd-ldap resource release issue (ITS#4016)
	Fixed slapd-meta rootdn lookup bug (ITS#4004)
	Fixed slapd-meta null value assert issue (ITS#4028)
	Added slapd-meta pooled connections (ITS#4056)
	Added slapd-meta target DSA bind defer when auth'd as rootdn (ITS#4057)
	Fixed slapd-meta pseudorootdn issue
	Fixed slapd-monitor unavailable issue (ITS#4013)
	Fixed slapd-perl init/destroy bug (ITS#3923)
	Fixed slapd-sql missing space issue (ITS#4061)
	Fixed slapo-accesslog timestamp normalization issue